# Rosa

./: .gitignore  LICENSE  README.md  rosa.opam
src/: case.ml  case.mli  constants.ml  constants.mli  dune  pattern.ml  pattern.mli  query.ml  rosa.ml
