opam-version: "2.0"
version: "0.1.1"
author: "Tarun Agarwal <me@tarunagarwal.me>"
maintainer: "Tarun Agarwal <me@tarunagarwal.me>"
homepage: "https://github.com/kodwx/Rosa"
bug-reports: "https://github.com/kodwx/Rosa/issues"
dev-repo: "git+https://github.com/kodwx/Rosa.git"
doc: "https://ocaml.org/p/rosa/v0.1.0"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.13.0"}
  "dune"  {>= "3.0.0"}
]
synopsis: "String manipulation library "
description: "
String manipulation library for OCaml.
Rosa has no runtime dependencies but building it requires dune.
"